--- a/package.json
+++ b/package.json
@@ -19,5 +19,6 @@
   "homepage": "https://github.com/oliverwalsh7/gradecalculator#readme",
   "dependencies": {
     "node": "^13.12.0"
-  }
+  },
+  "type": "module"
 }
